--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,37 @@
+<div class="jumbotron">
+	<div class="container">
+		<h1>Facebook on Rails</h1>
+		<P>welcome to the app</P>
+		<div class="progress">
+		    <div class="progress-bar" style="width: 40%"></div>
+			<div class="progress-bar progress-bar-warning" style="width: 10%"></div>
+			<div class="progress-bar progress-bar-danger" style="width: 10%"></div>
+			<div class="progress-bar progress-bar-success" style="width: 10%"></div>
+			<div class="progress-bar progress-bar-info" style="width: 30%"></div>
+		</div>
+	</div>
+
+</div>
+
 <div class="container">
-<h1>welcome to rails </h1>
-<h6>this is first application</h6>
+	<div class="row">
+		<div class="col-md-12">
+			<h3>how it works</h3>
+			<br>	
+		</div>
+	</div>
+    <div class="container">
+         <div class="col-md-4">
+         	<h2>login with facebook</h2>
+         	<p></p>
+         </div>
+         <div class="col-md-4">
+         	<h2>create posts</h2>
+         	<p>start posting content.only 160 characters.</p>
+         </div>
+         <div class="col-md-4">
+         	<h2>share</h2>
+         	<p>share posts with ur facebook friends</p>
+         </div>
+    </div>
 </div>
