added devise for user authentication ,added omniauth for facebook authorisation and added notifications

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top navbar-inverse">
 <div class="container">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -19,7 +19,13 @@
         
         <li><%= link_to 'All Posts', posts_path %></li>
         <li><%= link_to 'New Post', new_post_path %></li>
-
+        <% if user_signed_in? %>
+        <li><%= link_to 'Settings', edit_user_registration_path %></li>
+        <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+        <% else %>
+        <li><%= link_to 'Login' , new_user_session_path %></li>
+        <li><%= link_to 'Sign Up' , new_user_registration_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
