--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>FacebookOnRails</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
+	<head>
+	  <title>FacebookOnRails</title>
+	  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	  <%= csrf_meta_tags %>
+	</head>
 <body>
-<%= render 'layouts/header'%>
-<%= yield %>
-
+	<% flash.each do |name ,msg| %>
+		<div class="alert text-center alert-<%= name == notice ? "success" : "error" %>">
+			<a class="close" data-dismiss = "alert">X</a>
+			<%= msg %>
+		</div>
+	<% end %>
+	<%= render 'layouts/header'%>
+	<%= yield %>
 </body>
 </html>
