--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -10,13 +10,15 @@
     <%= f.input :email, :required => true, :autofocus => true,input_html: {class: 'form-control'}  %>
 
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
+        <% if f.object.encrypted_password.present? %>
+        <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false ,input_html: {class: 'form-control'} %>
+        <%= f.input :password_confirmation, :required => false,input_html: {class: 'form-control'}  %>
+        <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true ,input_html: {class: 'form-control'}  %>
     <% end %>
-
-    <%= f.input :password, :autocomplete => "off", :hint => "leave it blank if you don't want to change it", :required => false ,input_html: {class: 'form-control'} %>
-    <%= f.input :password_confirmation, :required => false,input_html: {class: 'form-control'}  %>
-    <%= f.input :current_password, :hint => "we need your current password to confirm your changes", :required => true ,input_html: {class: 'form-control'}  %>
   </div>
+
 
   <div class="form-actions">
     <%= f.button :submit, "Update" %>
