--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,9 +7,11 @@
   <%= f.error_notification %>
 
   <div class="form-inputs">
+  <% if f.object.password_required? %>
     <%= f.input :email, :required => true, :autofocus => true ,input_html: {class: 'form-control'} %>
     <%= f.input :password, :required => true ,input_html: {class: 'form-control'} %>
     <%= f.input :password_confirmation, :required => true ,input_html: {class: 'form-control'} %>
+    <% end %>
   </div>
   </br>
 
